--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -13,7 +13,7 @@
         <a href="./index.html">Go to home</a>
         <ul class="gallery"></ul>
     </div>
-    <script type="module" src="./js/1-gallery.js" defer></script>
+    <script type="module" src="./js/1-gallery.js"></script>
 
 </body>
 
